--- a/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
+++ b/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
@@ -3,13 +3,66 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 
-<VBox alignment="CENTER" prefHeight="566.0" prefWidth="998.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/25" fx:controller="dev.aboudey.addictionriskassessmenttool.MainController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<BorderPane style="-fx-background-color: #F8FAFC;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.aboudey.addictionriskassessmenttool.MainController"> <top>
+    <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-background-color: #FFFFFF; -fx-border-color: #E2E8F0; -fx-border-width: 0 0 1 0;">
+        <padding>
+            <Insets bottom="20" left="30" right="30" top="20" />
+        </padding>
+        <Label style="-fx-text-fill: #1E293B;                           -fx-font-family: 'Segoe UI', system-ui;                           -fx-font-size: 20px;                           -fx-font-weight: bold;" text="Addiction Risk Assessment" />
+    </HBox>
+</top>
 
-    <Label fx:id="welcomeText" />
-    <Button onAction="#onHelloButtonClick" text="test" />
-</VBox>
+    <right>
+        <VBox prefWidth="300" spacing="15" style="-fx-background-color: white;                      -fx-border-color: #E2E8F0;                      -fx-border-width: 0 0 0 1;">
+            <padding>
+                <Insets bottom="20" left="20" right="20" top="25" />
+            </padding>
+
+            <Label style="-fx-font-size: 16px;                           -fx-font-weight: bold;                           -fx-text-fill: #475569;" text="Available Tests" />
+         <Pane opacity="0.1" prefHeight="554.0" prefWidth="259.0" style="-fx-background-color: #878787; -fx-padding: 50; -fx-background-radius: 20;" />
+
+            <Label style="-fx-font-size: 11px; -fx-text-fill: #94A3B8;" text="Select a test from the list above to start" wrapText="true" />
+        </VBox>
+    </right>
+
+    <center>
+        <VBox alignment="CENTER" spacing="30">
+            <padding>
+                <Insets bottom="40" left="40" right="40" top="40" />
+            </padding>
+
+                  <VBox alignment="CENTER" spacing="15" style="-fx-background-color: white;                          -fx-background-radius: 20;                          -fx-padding: 50;">
+                <effect>
+                    <DropShadow color="#00000010" radius="15" spread="0.05" />
+                </effect>
+
+                      <StackPane>
+                    <Circle fill="#F0FDF4" radius="40" />
+                    <Label prefHeight="69.0" prefWidth="106.0" style="-fx-font-size: 35px;" />
+               <ImageView fitHeight="62.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@images/health-report.png" />
+                  </image>
+               </ImageView>
+                </StackPane>
+
+                      <VBox alignment="CENTER" spacing="5">
+                    <Label style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #1E293B;" text="Start New Assessment" />
+                    <Label style="-fx-font-size: 13px; -fx-text-fill: #64748B;" text="Create Your own Test" />
+                </VBox>
+
+                      <Button fx:id="createTestButton" onAction="#onCreateTestButtonClick" onMouseClicked="#onCreateTestButtonClick" prefHeight="50" prefWidth="240" style="                             -fx-background-color: #10B981;                             -fx-text-fill: white;                             -fx-font-size: 15px;                             -fx-font-weight: bold;                             -fx-background-radius: 12;                             -fx-cursor: hand;                         " text="+ Create New Test" />
+            </VBox>
+        </VBox>
+    </center>
+</BorderPane>
