--- a/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
+++ b/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -13,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-<BorderPane style="-fx-background-color: #F8FAFC;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.aboudey.addictionriskassessmenttool.MainController"> <top>
+<BorderPane prefHeight="997.0" prefWidth="1502.0" style="-fx-background-color: #F8FAFC;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.aboudey.addictionriskassessmenttool.MainController"> <top>
     <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-background-color: #FFFFFF; -fx-border-color: #E2E8F0; -fx-border-width: 0 0 1 0;">
         <padding>
             <Insets bottom="20" left="30" right="30" top="20" />
@@ -61,8 +64,16 @@
                     <Label style="-fx-font-size: 13px; -fx-text-fill: #64748B;" text="Create Your own Test" />
                 </VBox>
 
-                      <Button fx:id="createTestButton" onAction="#onCreateTestButtonClick" onMouseClicked="#onCreateTestButtonClick" prefHeight="50" prefWidth="240" style="                             -fx-background-color: #10B981;                             -fx-text-fill: white;                             -fx-font-size: 15px;                             -fx-font-weight: bold;                             -fx-background-radius: 12;                             -fx-cursor: hand;                         " text="+ Create New Test" />
+                      <Button fx:id="createTestButton" onAction="#onCreateTestButtonClick" prefHeight="50" prefWidth="240" style="                                    -fx-background-color: #10B981;                                               -fx-text-fill: white;                                                 -fx-font-size: 15px;                                                         -fx-font-weight: bold;                                                      -fx-background-radius: 12;                                                       -fx-cursor: hand; " text="+ Create New Test" />
             </VBox>
+         <LineChart>
+           <xAxis>
+             <CategoryAxis side="BOTTOM" />
+           </xAxis>
+           <yAxis>
+             <NumberAxis side="LEFT" />
+           </yAxis>
+         </LineChart>
         </VBox>
     </center>
 </BorderPane>
