--- a/src/main/resources/dev/aboudey/addictionriskassessmenttool/create-test.fxml
+++ b/src/main/resources/dev/aboudey/addictionriskassessmenttool/create-test.fxml
@@ -72,7 +72,7 @@
                                                 <Font name="Segoe UI Bold" size="18.0" />
                                             </font>
                                         </Label>
-                              <TextField prefHeight="25.0" prefWidth="545.0" />
+                              <TextField prefHeight="25.0" prefWidth="819.0" styleClass="questionField" />
                                         <Label style="-fx-font-size: 12;" text="Risk Impact Level" textFill="#64748b" />
                                     </children>
                                 </HBox>
