--- a/src/main/resources/shortcuts/QuestionOption.fxml
+++ b/src/main/resources/shortcuts/QuestionOption.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
-
 <VBox xmlns="http://javafx.com/javafx/25"
       xmlns:fx="http://javafx.com/fxml/1"
       spacing="20.0"
@@ -31,7 +30,7 @@
             </font>
         </Label>
 
-        <TextField prefHeight="25.0" prefWidth="545.0"/>
+        <TextField prefHeight="25.0" prefWidth="819.0" styleClass="questionField" />
 
         <Label text="Risk Impact Level"
                style="-fx-font-size: 12;"
@@ -66,6 +65,8 @@
                              -fx-background-radius: 8;
                              -fx-font-weight: bold;"/>
         </HBox>
+        <Button mnemonicParsing="false" style="-fx-background-color: transparent; -fx-text-fill: #4f46e5; -fx-font-weight: bold; -fx-border-color: #4f46e5; -fx-border-radius: 8;" text="+ Add Answer Option" />
+
     </VBox>
 
 </VBox>
