--- a/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
+++ b/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
@@ -32,7 +31,7 @@
             </padding>
 
             <Label style="-fx-font-size: 16px;                           -fx-font-weight: bold;                           -fx-text-fill: #475569;" text="Available Tests" />
-         <Pane opacity="0.1" prefHeight="554.0" prefWidth="259.0" style="-fx-background-color: #878787; -fx-padding: 50; -fx-background-radius: 20;" />
+         <VBox fx:id="testsBoxHandler" prefHeight="531.0" prefWidth="235.0" />
 
             <Label style="-fx-font-size: 11px; -fx-text-fill: #94A3B8;" text="Select a test from the list above to start" wrapText="true" />
         </VBox>
