--- a/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
+++ b/src/main/resources/dev/aboudey/addictionriskassessmenttool/hello-view.fxml
@@ -67,7 +67,7 @@
             </VBox>
          <LineChart>
            <xAxis>
-             <CategoryAxis side="BOTTOM" />
+             <CategoryAxis prefWidth="1065.0" side="BOTTOM" />
            </xAxis>
            <yAxis>
              <NumberAxis side="LEFT" />
