--- a/src/main/resources/dev/aboudey/addictionriskassessmenttool/take-test.fxml
+++ b/src/main/resources/dev/aboudey/addictionriskassessmenttool/take-test.fxml
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #f8fafc;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.aboudey.addictionriskassessmenttool.TakeTestController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #f8fafc;" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dev.aboudey.addictionriskassessmenttool.ui.TestScreen">
 
     <center>
         <ScrollPane fitToWidth="true" style="-fx-background-color: transparent; -fx-background: #f8fafc;">
@@ -83,7 +75,7 @@
     <bottom>
         <HBox alignment="CENTER_RIGHT" prefHeight="80.0" spacing="15.0" style="-fx-background-color: white; -fx-border-color: #e2e8f0; -fx-border-width: 1 0 0 0;" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="prevButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: transparent; -fx-text-fill: #64748b; -fx-font-weight: bold; -fx-cursor: hand;" text="Previous" visible="false" /> <Region HBox.hgrow="ALWAYS" /> <Button id="nextButton" fx:id="nextButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="160.0" style="-fx-background-color: #4f46e5; -fx-background-radius: 10; -fx-cursor: hand;" text="Next Question" textFill="WHITE">
+                <Button fx:id="prevButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="120.0" style="-fx-background-color: transparent; -fx-text-fill: #64748b; -fx-font-weight: bold; -fx-cursor: hand;" text="Previous" visible="false" /> <Region HBox.hgrow="ALWAYS" /> <Button id="nextButton" fx:id="nextButton" mnemonicParsing="false" onAction="#onNextButtonClick" prefHeight="45.0" prefWidth="160.0" style="-fx-background-color: #4f46e5; -fx-background-radius: 10; -fx-cursor: hand;" text="Next Question" textFill="WHITE">
                 <font>
                     <Font name="Segoe UI Bold" size="14.0" />
                 </font>
